<resources>
    <string name="app_name">Smart Park</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="app_details">Smart Vehicle Parking System</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="return_to_login">Return to login</string>
    <string name="email_vaild">Please enter valid email</string>
    <string name="add">Add</string>
    <string name="release">Release</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="please_enter_login">Please enter valid username and password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="login_working">Getting ready...</string>
    <string name="logout">Logout</string>
</resources>