<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_container"
    android:background="@color/md_grey_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/login_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:translationZ="4dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:padding="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <!-- username Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/FullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_action_person"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:ems="11"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:hint="@string/full_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- username Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="100"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/Email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_action_person"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:ems="11"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:hint="@string/email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- username Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/Mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_action_person"
                            android:inputType="phone"
                            android:imeOptions="actionNext"
                            android:ems="11"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:hint="@string/mobile" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- username Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_action_person"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:ems="11"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:hint="@string/username" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Password Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">
                        <EditText android:id="@+id/Password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="11"
                            android:imeOptions="actionDone"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_action_vpn_key"
                            android:drawableStart="@drawable/ic_action_vpn_key"
                            android:hint="@string/password"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Password Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">
                        <EditText android:id="@+id/ConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="11"
                            android:imeOptions="actionDone"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_action_vpn_key"
                            android:drawableStart="@drawable/ic_action_vpn_key"
                            android:hint="@string/confirm_password"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Login Button -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/mRegisterBtn"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_gravity="center_horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@drawable/button_shape"
                        android:textSize="18sp"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/register"/>

                    <TextView
                        android:id="@+id/login_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/return_to_login"
                        android:textAllCaps="true"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/md_cyan_800"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>