<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_container"
    android:background="@color/md_grey_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/login_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:translationZ="4dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="64dp"
                android:padding="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="56dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <!-- username Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="100"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_action_person"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:ems="11"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:hint="@string/username" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Password Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">
                        <EditText android:id="@+id/Password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="11"
                            android:imeOptions="actionDone"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_action_vpn_key"
                            android:drawableStart="@drawable/ic_action_vpn_key"
                            android:hint="@string/password"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Login Button -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/mLoginBtn"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_gravity="center_horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@drawable/button_shape"
                        android:textSize="18sp"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/login"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_margin="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Not Registered ?"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/register_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:layout_marginLeft="5dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/md_cyan_800"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/profile_dummy" />

    </RelativeLayout>

</RelativeLayout>